[package]
name        = "dirs-sys"
version     = "0.4.0"
authors     = ["Simon Ochsenreither <simon@ochsenreither.de>"]
description = "System-level helper functions for the dirs and directories crates."
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/dirs-dev/dirs-sys-rs"
maintenance = { status = "as-is" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = { version = "0.4", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
] }

[features]
default = ["getpwuid"]

# Default features, except follow the behavior of libxdg-basedir, which does
# not fall back to `getpwuid_r`.
default_xdg = []

# Enable this to have dirs-sys call `getpwuid_r` as a fallback in case `HOME`
# is unset or empty.
getpwuid = ["libc"]
